--- a/App/frontend/package.json
+++ b/App/frontend/package.json
@@ -16,12 +16,24 @@
   ],
   "dependencies": {
     "axios": "^1.6.3",
+    "bootstrap": "^5.3.3",
+    "datatables.net-bs5": "^2.2.2",
+    "datatables.net-colreorder-bs5": "^2.0.4",
+    "datatables.net-datetime": "^1.5.5",
+    "datatables.net-fixedheader-bs5": "^4.0.1",
+    "datatables.net-react": "^1.0.0",
+    "datatables.net-responsive-bs5": "^3.0.4",
+    "datatables.net-rowgroup-bs5": "^1.5.1",
+    "datatables.net-searchbuilder-bs5": "^1.8.2",
+    "datatables.net-searchpanes-bs5": "^2.3.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "forever": "^4.0.3",
     "path": "^0.12.7",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.1"
   },
