--- a/App/frontend/package.json
+++ b/App/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.6.3",
     "bootstrap": "^5.3.3",
     "datatables.net-bs5": "^2.2.2",
+    "datatables.net-buttons-bs5": "^3.2.2",
     "datatables.net-colreorder-bs5": "^2.0.4",
     "datatables.net-datetime": "^1.5.5",
     "datatables.net-fixedheader-bs5": "^4.0.1",
